perf(deezer-client-java): use clazz to get serializer BREAKING